# Tayo

./: .gitmodules  CMakeLists.txt  README.md  Tayo.sln  Tayo.vcxproj  Tayo.vcxproj.filters  premake5.lua
Example/: Example.vcxproj
Example/src/: SandboxApp.cpp
Sandbox/: Sandbox.vcxproj  imgui.ini
Sandbox/assets/shaders/: FlatColor.glsl
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Tayo/: Tayo.vcxproj  Tayo.vcxproj.filters
Tayo/src/: Tayo.h  typch.h
Tayo/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_impl_opengl3.cpp
Tayo/src/Platform/Windows/: WIndowsInput.h  WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Tayo/src/Tayo/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCode.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCode.h  Window.h
Tayo/src/Tayo/Core/: Application.cpp  Application.h  Core.h  Input.h  Layer.cpp  Layer.h  LayerStack.h  Log.cpp  Timestep.h  Window.h
Tayo/src/Tayo/Events/: AppllicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Tayo/src/Tayo/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Tayo/src/Tayo/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
